--- a/run.ipynb
+++ b/run.ipynb
@@ -832,11 +832,125 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Train an SAE on hook_q to minimize reconstruction MSE loss of the attention pattern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_tokens_per_buffer (millions): 0.008192\n",
+      "Lower bound: n_contexts_per_buffer (millions): 6.4e-05\n",
+      "Total training steps: 24\n",
+      "n_dead_feature_samples: -1\n",
+      "Loaded pretrained model gpt2-small into HookedTransformer\n",
+      "Moving model to device:  mps\n",
+      "Dataset is not tokenized! Updating config.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training SAE:   0%|          | 0/100000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4096, 64]) torch.Size([4096, 64])\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "einsum(): the number of subscripts in the equation (3) does not match the number of dimensions (2) for operand 0 and no ellipsis was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 54\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msae_training\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlm_runner\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m language_model_sae_runner\n\u001b[1;32m      9\u001b[0m cfg \u001b[38;5;241m=\u001b[39m LanguageModelSAERunnerConfig(\n\u001b[1;32m     10\u001b[0m \n\u001b[1;32m     11\u001b[0m     \u001b[38;5;66;03m# Data Generating Function (Model + Training Distibuion)\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     51\u001b[0m     dtype \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mfloat32,\n\u001b[1;32m     52\u001b[0m     )\n\u001b[0;32m---> 54\u001b[0m sparse_autoencoder \u001b[38;5;241m=\u001b[39m \u001b[43mlanguage_model_sae_runner\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcfg\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Research/MATS_Neel/mats_sae_training/sae_training/lm_runner.py:19\u001b[0m, in \u001b[0;36mlanguage_model_sae_runner\u001b[0;34m(cfg)\u001b[0m\n\u001b[1;32m     16\u001b[0m     wandb\u001b[38;5;241m.\u001b[39minit(project\u001b[38;5;241m=\u001b[39mcfg\u001b[38;5;241m.\u001b[39mwandb_project, config\u001b[38;5;241m=\u001b[39mcfg)\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# train SAE\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m sparse_autoencoder \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_sae_on_language_model\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     20\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msparse_autoencoder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mactivations_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcfg\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     21\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m# save sae to checkpoints folder\u001b[39;00m\n\u001b[1;32m     24\u001b[0m path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcfg\u001b[38;5;241m.\u001b[39mcheckpoint_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/final_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msparse_autoencoder\u001b[38;5;241m.\u001b[39mget_name()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.pkl.gz\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "File \u001b[0;32m~/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Research/MATS_Neel/mats_sae_training/sae_training/train_sae_on_language_model.py:106\u001b[0m, in \u001b[0;36mtrain_sae_on_language_model\u001b[0;34m(model, sparse_autoencoder, activation_store, cfg)\u001b[0m\n\u001b[1;32m    102\u001b[0m n_training_tokens \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m batch_size\n\u001b[1;32m    104\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m cfg\u001b[38;5;241m.\u001b[39muse_pattern_reconstruction_loss:\n\u001b[1;32m    105\u001b[0m     \u001b[38;5;66;03m# Throw out the MSE loss and instead calculate the pattern reconstruction MSE\u001b[39;00m\n\u001b[0;32m--> 106\u001b[0m     origial_pattern \u001b[38;5;241m=\u001b[39m \u001b[43mcalc_attn_pattern\u001b[49m\u001b[43m(\u001b[49m\u001b[43mq_activations\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mk_activations\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcfg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    107\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m cfg\u001b[38;5;241m.\u001b[39mhook_point[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m6\u001b[39m:] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhook_q\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m    108\u001b[0m         reconstructed_pattern \u001b[38;5;241m=\u001b[39m calc_attn_pattern(sae_out, k_activations, cfg, model)\n",
+      "File \u001b[0;32m~/Library/Mobile Documents/com~apple~CloudDocs/Desktop/Research/MATS_Neel/mats_sae_training/sae_training/utils.py:107\u001b[0m, in \u001b[0;36mcalc_attn_pattern\u001b[0;34m(q, k, cfg, model)\u001b[0m\n\u001b[1;32m    105\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcalc_attn_pattern\u001b[39m(q: torch\u001b[38;5;241m.\u001b[39mTensor, k: torch\u001b[38;5;241m.\u001b[39mTensor, cfg: LanguageModelSAERunnerConfig,\n\u001b[1;32m    106\u001b[0m                       model: HookedTransformer):\n\u001b[0;32m--> 107\u001b[0m     attn_scores \u001b[38;5;241m=\u001b[39m \u001b[43meinops\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meinsum\u001b[49m\u001b[43m(\u001b[49m\u001b[43mq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mk\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mbatch query_pos d_head, \u001b[39;49m\u001b[38;5;130;43;01m\\\u001b[39;49;00m\n\u001b[1;32m    108\u001b[0m \u001b[38;5;124;43m                                            batch key_pos d_head -> \u001b[39;49m\u001b[38;5;130;43;01m\\\u001b[39;49;00m\n\u001b[1;32m    109\u001b[0m \u001b[38;5;124;43m                                                batch query_pos key_pos\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    110\u001b[0m     attn_scores \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39msqrt(model\u001b[38;5;241m.\u001b[39mcfg\u001b[38;5;241m.\u001b[39md_head)\n\u001b[1;32m    111\u001b[0m     layer_idx \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(cfg\u001b[38;5;241m.\u001b[39mhook_point\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m1\u001b[39m])\n",
+      "File \u001b[0;32m~/miniconda3/envs/interp/lib/python3.10/site-packages/einops/einops.py:901\u001b[0m, in \u001b[0;36meinsum\u001b[0;34m(*tensors_and_pattern)\u001b[0m\n\u001b[1;32m    899\u001b[0m tensors \u001b[38;5;241m=\u001b[39m tensors_and_pattern[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m    900\u001b[0m pattern \u001b[38;5;241m=\u001b[39m _compactify_pattern_for_einsum(pattern)\n\u001b[0;32m--> 901\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mget_backend\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meinsum\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpattern\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mtensors\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/interp/lib/python3.10/site-packages/einops/_backends.py:287\u001b[0m, in \u001b[0;36mTorchBackend.einsum\u001b[0;34m(self, pattern, *x)\u001b[0m\n\u001b[1;32m    286\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21meinsum\u001b[39m(\u001b[38;5;28mself\u001b[39m, pattern, \u001b[38;5;241m*\u001b[39mx):\n\u001b[0;32m--> 287\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meinsum\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpattern\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/interp/lib/python3.10/site-packages/torch/functional.py:377\u001b[0m, in \u001b[0;36meinsum\u001b[0;34m(*args)\u001b[0m\n\u001b[1;32m    372\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m einsum(equation, \u001b[38;5;241m*\u001b[39m_operands)\n\u001b[1;32m    374\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(operands) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m opt_einsum\u001b[38;5;241m.\u001b[39menabled:\n\u001b[1;32m    375\u001b[0m     \u001b[38;5;66;03m# the path for contracting 0 or 1 time(s) is already optimized\u001b[39;00m\n\u001b[1;32m    376\u001b[0m     \u001b[38;5;66;03m# or the user has disabled using opt_einsum\u001b[39;00m\n\u001b[0;32m--> 377\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_VF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meinsum\u001b[49m\u001b[43m(\u001b[49m\u001b[43mequation\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moperands\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# type: ignore[attr-defined]\u001b[39;00m\n\u001b[1;32m    379\u001b[0m path \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    380\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m opt_einsum\u001b[38;5;241m.\u001b[39mis_available():\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: einsum(): the number of subscripts in the equation (3) does not match the number of dimensions (2) for operand 0 and no ellipsis was given"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import os \n",
+    "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
+    "os.environ[\"WANDB__SERVICE_WAIT\"] = \"300\"\n",
+    "\n",
+    "from sae_training.config import LanguageModelSAERunnerConfig\n",
+    "from sae_training.lm_runner import language_model_sae_runner\n",
+    "\n",
+    "cfg = LanguageModelSAERunnerConfig(\n",
+    "\n",
+    "    # Data Generating Function (Model + Training Distibuion)\n",
+    "    model_name = \"gpt2-small\",\n",
+    "    hook_point = \"blocks.10.attn.hook_q\",\n",
+    "    hook_point_layer = 10,\n",
+    "    hook_point_head_index=7,\n",
+    "    d_in = 64,\n",
+    "    dataset_path = \"Skylion007/openwebtext\",\n",
+    "    is_dataset_tokenized=False,\n",
+    "    use_pattern_reconstruction_loss=True,\n",
+    "    \n",
+    "    # SAE Parameters\n",
+    "    expansion_factor = 64, # determines the dimension of the SAE.\n",
+    "    \n",
+    "    # Training Parameters\n",
+    "    lr = 1e-3,\n",
+    "    l1_coefficient = 0.001,\n",
+    "    lr_scheduler_name=None,\n",
+    "    train_batch_size = 4096,\n",
+    "    context_size = 128,\n",
+    "    \n",
+    "    # Activation Store Parameters\n",
+    "    n_batches_in_buffer = 2,\n",
+    "    total_training_tokens = 100_000,\n",
+    "    store_batch_size = 32,\n",
+    "    \n",
+    "    # Resampling protocol\n",
+    "    feature_sampling_method = 'l2',\n",
+    "    feature_sampling_window = 1000,\n",
+    "    feature_reinit_scale = 0.2,\n",
+    "    dead_feature_window=1000,\n",
+    "    dead_feature_threshold = 1e-7,\n",
+    "    \n",
+    "    # WANDB\n",
+    "    log_to_wandb = False,\n",
+    "    \n",
+    "    # Misc\n",
+    "    device = \"mps\",\n",
+    "    seed = 42,\n",
+    "    n_checkpoints = 5,\n",
+    "    checkpoint_path = \"checkpoints\",\n",
+    "    dtype = torch.float32,\n",
+    "    )\n",
+    "\n",
+    "sparse_autoencoder = language_model_sae_runner(cfg)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ditto but with caching"
+   ]
   }
  ],
  "metadata": {
