--- a/research/run.ipynb
+++ b/research/run.ipynb
@@ -306,15 +306,16 @@
     "    \n",
     "    # Activation Store Parameters\n",
     "    n_batches_in_buffer = 128,\n",
-    "    total_training_tokens = 1_000_000 * 1_000, # 200M tokens seems doable overnight.\n",
+    "    total_training_tokens = 1_000_000 * 300, # 200M tokens seems doable overnight.\n",
     "    store_batch_size = 32,\n",
     "    \n",
     "    # Resampling protocol\n",
-    "    feature_sampling_method = 'anthropic',\n",
+    "    use_ghost_grads=True,\n",
+    "    feature_sampling_method = None,\n",
     "    feature_sampling_window = 1000,\n",
     "    feature_reinit_scale = 0.2,\n",
     "    resample_batches=1028,\n",
-    "    dead_feature_window=50000,\n",
+    "    dead_feature_window=5000,\n",
     "    dead_feature_threshold = 1e-6,\n",
     "    \n",
     "    # WANDB\n",
